--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/marketplace_app_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/marketplace_app_db1
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
