add global exception handling, modified pom.xml and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/marketplace_app_db2
+spring.datasource.url=jdbc:postgresql://localhost:5432/marketplace_app_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
